fix slider on small devices

--- a/src/style/Catalogue.scss
+++ b/src/style/Catalogue.scss
@@ -22,12 +22,8 @@
 .Catalogue__image {
   width: 100%;
   position: relative;
-  margin-bottom: 25px;
+  margin-bottom: $spacing-small;
   border: 1px solid $color-ultra-light;
-  /*   filter: grayscale(90%) sepia(8%) saturate(200%);
-  &:hover {
-    filter: none;
-  } */
 }
 
 .Catalogue__details {
