--- a/src/style/Product.scss
+++ b/src/style/Product.scss
@@ -39,6 +39,7 @@
   border: 1px solid $color-dark;
   height: 100%;
   cursor: pointer;
+  width: 100%;
 }
 
 .Product__image__selected {
